# rust-hdi-extensions

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  VERSIONS.md  flake.nix
src/: lib.rs  macros.rs
tests/: Makefile  package-lock.json  package.json  utils.js
tests/integration/: test_basic.js  types.js
tests/model_dna/: dna.yaml
tests/test_types/: Cargo.toml
tests/test_types/src/: lib.rs
tests/zomes/: Cargo.toml
tests/zomes/basic_usage/: Cargo.toml
tests/zomes/basic_usage/src/: lib.rs
tests/zomes/basic_usage_csr/: Cargo.toml
tests/zomes/basic_usage_csr/src/: lib.rs
