[package]
name = "basic_usage_csr"
version = "0.0.0"
edition = "2021"

[lib]
name = "basic_usage_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
basic_usage = { path = "../basic_usage" }
hdk = "=0.4.1"
serde = "1"
test_types = { path = "../../test_types" }
whi_hdi_extensions = { path = "../../.." }
